fix `Surface` alignment by not relying on `scrollbar-gutter` (#1810)

--- a/packages/itwinui-css/src/surface/surface.scss
+++ b/packages/itwinui-css/src/surface/surface.scss
@@ -2,7 +2,8 @@
 // See LICENSE.md in the project root for license terms and full copyright notice.
 @use './base';
 
-$surface-padding: var(--iui-size-2xs);
+$surface-padding: var(--iui-size-s);
+$surface-padding-with-gutter: var(--iui-size-2xs);
 
 .iui-surface {
   @include base.iui-surface;
@@ -14,8 +15,8 @@ $surface-padding: var(--iui-size-2xs);
   align-items: center;
   overflow: hidden;
   border-bottom: 1px solid var(--iui-surface-border-color);
-  padding: $surface-padding;
-  scrollbar-gutter: stable both-edges;
+  padding-inline: $surface-padding;
+  min-block-size: var(--iui-component-height);
 }
 
 .iui-surface-body {
@@ -23,12 +24,14 @@ $surface-padding: var(--iui-size-2xs);
   overflow-x: hidden;
   overflow-y: auto;
 
-  &[data-iui-padded='false'] {
-    overflow-y: overlay;
-  }
-
   &[data-iui-padded='true'] {
-    scrollbar-gutter: stable both-edges;
     padding: $surface-padding;
+
+    // Scrollbars might not always occupy space even with a stable gutter, so this can still
+    // result in (tolerable) differences on the right side, depending on scrollbar visibility.
+    // More importantly, the left side will remain aligned, because we are not using a gutter there.
+    // See: https://github.com/iTwin/iTwinUI/issues/1801
+    scrollbar-gutter: stable;
+    padding-inline-end: $surface-padding-with-gutter;
   }
 }
